@@ -1,48 +1,64 @@
 package bio.terra.service.filedata.azure.blobstore;
 
 import static bio.terra.service.filedata.DrsService.getLastNameFromPath;
+import static bio.terra.service.filedata.google.gcs.GcsConstants.USER_PROJECT_QUERY_PARAM;
+import static bio.terra.service.filedata.google.gcs.GcsPdao.getProjectIdFromGsPath;
 
+import bio.terra.common.UriUtils;
 import bio.terra.common.exception.PdaoException;
 import bio.terra.common.iam.AuthenticatedUserRequest;
 import bio.terra.model.BillingProfileModel;
 import bio.terra.model.FileLoadModel;
+import bio.terra.service.common.azure.AzureUriUtils;
+import bio.terra.service.common.gcs.GcsUriUtils;
+import bio.terra.service.dataset.Dataset;
 import bio.terra.service.filedata.CloudFileReader;
 import bio.terra.service.filedata.FSFileInfo;
+import bio.terra.service.filedata.FSItem;
+import bio.terra.service.filedata.FileIdService;
+import bio.terra.service.filedata.FileMetadataUtils;
+import bio.terra.service.filedata.FileMetadataUtils.Md5ValidationResult;
 import bio.terra.service.filedata.azure.util.AzureBlobStoreBufferedReader;
 import bio.terra.service.filedata.azure.util.AzureBlobStoreBufferedWriter;
 import bio.terra.service.filedata.azure.util.BlobContainerClientFactory;
+import bio.terra.service.filedata.azure.util.BlobContainerCopier;
+import bio.terra.service.filedata.azure.util.BlobContainerCopyInfo;
 import bio.terra.service.filedata.azure.util.BlobCrl;
 import bio.terra.service.filedata.azure.util.BlobSasTokenOptions;
 import bio.terra.service.filedata.google.firestore.FireStoreFile;
+import bio.terra.service.filedata.google.gcs.GcsPdao;
+import bio.terra.service.filedata.google.gcs.GcsProjectFactory;
 import bio.terra.service.profile.ProfileDao;
 import bio.terra.service.resourcemanagement.azure.AzureAuthService;
 import bio.terra.service.resourcemanagement.azure.AzureContainerPdao;
 import bio.terra.service.resourcemanagement.azure.AzureResourceConfiguration;
 import bio.terra.service.resourcemanagement.azure.AzureResourceDao;
 import bio.terra.service.resourcemanagement.azure.AzureStorageAccountResource;
-import bio.terra.service.resourcemanagement.azure.AzureStorageAccountResource.ContainerType;
+import bio.terra.service.resourcemanagement.azure.AzureStorageAccountResource.FolderType;
 import bio.terra.service.resourcemanagement.exception.AzureResourceException;
-import com.azure.core.credential.TokenCredential;
+import com.azure.core.util.polling.LongRunningOperationStatus;
+import com.azure.core.util.polling.PollResponse;
 import com.azure.storage.blob.BlobUrlParts;
 import com.azure.storage.blob.models.BlobItem;
 import com.azure.storage.blob.models.BlobProperties;
 import com.azure.storage.blob.models.ListBlobsOptions;
 import com.azure.storage.blob.sas.BlobSasPermission;
-import com.azure.storage.common.policy.RequestRetryOptions;
-import com.azure.storage.common.policy.RetryPolicyType;
+import com.google.cloud.storage.Blob;
+import com.google.cloud.storage.Storage;
 import com.google.common.annotations.VisibleForTesting;
-import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Paths;
 import java.time.Duration;
 import java.time.Instant;
 import java.util.List;
+import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import org.apache.commons.codec.binary.Hex;
-import org.apache.commons.lang.StringUtils;
+import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -53,7 +69,7 @@ public class AzureBlobStorePdao implements CloudFileReader {
 
   private static final Logger logger = LoggerFactory.getLogger(AzureBlobStorePdao.class);
 
-  private static final Duration DEFAULT_SAS_TOKEN_EXPIRATION = Duration.ofHours(24);
+  public static final Duration DEFAULT_SAS_TOKEN_EXPIRATION = Duration.ofHours(24);
 
   private static final int LOG_RETENTION_DAYS = 90;
 
@@ -65,6 +81,10 @@ public class AzureBlobStorePdao implements CloudFileReader {
   private final AzureResourceConfiguration resourceConfiguration;
   private final AzureResourceDao azureResourceDao;
   private final AzureAuthService azureAuthService;
+  private final AzureBlobService azureBlobService;
+  private final FileIdService fileIdService;
+  private final GcsProjectFactory gcsProjectFactory;
+  private final GcsPdao gcsPdao;
 
   @Autowired
   public AzureBlobStorePdao(
@@ -72,36 +92,36 @@ public class AzureBlobStorePdao implements CloudFileReader {
       AzureContainerPdao azureContainerPdao,
       AzureResourceConfiguration resourceConfiguration,
       AzureResourceDao azureResourceDao,
-      AzureAuthService azureAuthService) {
+      AzureAuthService azureAuthService,
+      AzureBlobService azureBlobService,
+      FileIdService fileIdService,
+      GcsProjectFactory gcsProjectFactory,
+      GcsPdao gcsPdao) {
     this.profileDao = profileDao;
     this.azureContainerPdao = azureContainerPdao;
     this.resourceConfiguration = resourceConfiguration;
     this.azureResourceDao = azureResourceDao;
     this.azureAuthService = azureAuthService;
-  }
-
-  private RequestRetryOptions getRetryOptions() {
-    return new RequestRetryOptions(
-        RetryPolicyType.EXPONENTIAL,
-        this.resourceConfiguration.getMaxRetries(),
-        this.resourceConfiguration.getRetryTimeoutSeconds(),
-        null,
-        null,
-        null);
+    this.azureBlobService = azureBlobService;
+    this.fileIdService = fileIdService;
+    this.gcsProjectFactory = gcsProjectFactory;
+    this.gcsPdao = gcsPdao;
   }
 
   public FSFileInfo copyFile(
+      Dataset dataset,
       BillingProfileModel profileModel,
       FileLoadModel fileLoadModel,
       String fileId,
       AzureStorageAccountResource storageAccountResource,
       AuthenticatedUserRequest userRequest) {
 
+    SourceFileInfo sourceFileInfo =
+        getSourceFileInfo(profileModel.getTenantId(), fileLoadModel.getSourcePath());
     BlobContainerClientFactory targetClientFactory =
         getTargetDataClientFactory(
             profileModel,
             storageAccountResource,
-            ContainerType.DATA,
             new BlobSasTokenOptions(
                 DEFAULT_SAS_TOKEN_EXPIRATION,
                 new BlobSasPermission()
@@ -110,33 +130,115 @@ public class AzureBlobStorePdao implements CloudFileReader {
                     .setWritePermission(true),
                 userRequest.getEmail()));
 
-    BlobContainerClientFactory sourceClientFactory =
-        buildSourceClientFactory(profileModel.getTenantId(), fileLoadModel.getSourcePath());
-
-    BlobCrl blobCrl = getBlobCrl(targetClientFactory);
+    BlobCrl blobCrl = azureBlobService.getBlobCrl(targetClientFactory);
 
     // Read the leaf node of the source file to use as a way to name the file we store
-    BlobUrlParts blobUrl = BlobUrlParts.parse(fileLoadModel.getSourcePath());
-    String fileName = getLastNameFromPath(blobUrl.getBlobName());
+    String fileName = getLastNameFromPath(UriUtils.toUri(fileLoadModel.getSourcePath()).getPath());
 
-    String blobName = getBlobName(fileId, fileName);
-    blobCrl
-        .createBlobContainerCopier(sourceClientFactory, blobUrl.getBlobName(), blobName)
-        .beginCopyOperation()
-        .waitForCompletion();
+    Md5ValidationResult finalMd5 =
+        FileMetadataUtils.validateFileMd5ForIngest(
+            fileLoadModel.getMd5(), sourceFileInfo.md5(), fileLoadModel.getSourcePath());
+
+    String effectiveFileId;
+    if (fileId == null) {
+      effectiveFileId =
+          fileIdService
+              .calculateFileId(
+                  dataset,
+                  new FSItem()
+                      .path(fileLoadModel.getTargetPath())
+                      .checksumMd5(finalMd5.effectiveMd5())
+                      .size(sourceFileInfo.size()))
+              .toString();
+    } else {
+      effectiveFileId = fileId;
+    }
+
+    String blobName = getBlobName(effectiveFileId, fileName);
+    BlobContainerCopier blobContainerCopier;
+    if (sourceFileInfo.sourceClientFactory() != null) {
+      blobContainerCopier =
+          blobCrl.createBlobContainerCopier(
+              sourceFileInfo.sourceClientFactory(), sourceFileInfo.sourceUrl(), blobName);
+    } else {
+      // In the case sourceClientFactory is null, this indicates that we are loading from a gs URI
+      blobContainerCopier =
+          blobCrl.createBlobContainerCopier(UriUtils.toUri(sourceFileInfo.sourceUrl()), blobName);
+    }
+    Instant startTime = Instant.now();
+    logger.info("Starting copy operation for {}", blobName);
+    PollResponse<BlobContainerCopyInfo> copyResponse =
+        blobContainerCopier.beginCopyOperation().waitForCompletion();
+    logger.info(
+        "Finished copy operation for {} with status {} in {} seconds",
+        blobName,
+        copyResponse.getStatus(),
+        Duration.between(startTime, Instant.now()).getSeconds());
+
+    if (!copyResponse.getStatus().equals(LongRunningOperationStatus.SUCCESSFULLY_COMPLETED)) {
+      throw new PdaoException(
+          "Blob %s was not successfully copied with status: %s"
+              .formatted(blobName, copyResponse.getStatus()));
+    }
 
     BlobProperties blobProperties = blobCrl.getBlobProperties(blobName);
     Instant createTime = blobProperties.getCreationTime().toInstant();
+
+    String checksumMd5;
+    if (finalMd5.isUserProvided()) {
+      checksumMd5 = finalMd5.effectiveMd5();
+    } else {
+      // If the MD5 wasn't set in the cloud and it has been read from the source, explicitly set it
+      if (blobProperties.getContentMd5() == null && finalMd5.effectiveMd5() != null) {
+        blobCrl.setBlobMd5(blobName, finalMd5.effectiveMd5().getBytes(StandardCharsets.UTF_8));
+      }
+      checksumMd5 =
+          Optional.ofNullable(blobProperties.getContentMd5())
+              .map(Hex::encodeHexString)
+              .orElse(finalMd5.effectiveMd5());
+    }
     return new FSFileInfo()
-        .fileId(fileId)
+        .fileId(effectiveFileId)
         .createdDate(createTime.toString())
         .cloudPath(
             String.format(
                 "%s/%s",
                 targetClientFactory.getBlobContainerClient().getBlobContainerUrl(), blobName))
-        .checksumMd5(Hex.encodeHexString(blobProperties.getContentMd5()))
+        .checksumMd5(checksumMd5)
+        .userSpecifiedMd5(finalMd5.isUserProvided())
         .size(blobProperties.getBlobSize())
         .bucketResourceId(storageAccountResource.getResourceId().toString());
+  }
+
+  private record SourceFileInfo(
+      String md5, long size, BlobContainerClientFactory sourceClientFactory, String sourceUrl) {}
+
+  private SourceFileInfo getSourceFileInfo(UUID tenantId, String sourcePath) {
+    if (GcsUriUtils.isGsUri(sourcePath)) {
+      String projectId = getProjectIdFromGsPath(sourcePath);
+      Storage storage = gcsProjectFactory.getStorage(projectId);
+      String sanitizedSourcePath =
+          UriUtils.omitQueryParameter(sourcePath, USER_PROJECT_QUERY_PARAM);
+      Blob sourceBlob = GcsPdao.getBlobFromGsPath(storage, sanitizedSourcePath, projectId);
+
+      return new SourceFileInfo(
+          sourceBlob.getMd5ToHexString(), sourceBlob.getSize(), null, sourcePath);
+    } else {
+      BlobContainerClientFactory sourceClientFactory =
+          buildSourceClientFactory(tenantId, sourcePath);
+      BlobUrlParts blobUrl = BlobUrlParts.parse(sourcePath);
+      BlobProperties sourceBlobProperties =
+          sourceClientFactory
+              .getBlobContainerClient()
+              .getBlobClient(blobUrl.getBlobName())
+              .getProperties();
+      String md5 =
+          Optional.ofNullable(sourceBlobProperties.getContentMd5())
+              .map(Hex::encodeHexString)
+              .orElse(null);
+      return new SourceFileInfo(
+          md5, sourceBlobProperties.getBlobSize(), sourceClientFactory, blobUrl.getBlobName());
+    }
   }
 
   /**
@@ -147,7 +249,6 @@ public class AzureBlobStorePdao implements CloudFileReader {
    * @param tenantId tenantId as String for interface compatibility
    * @return A Stream of String lines.
    */
-  @SuppressFBWarnings("OS_OPEN_STREAM")
   @Override
   public Stream<String> getBlobsLinesStream(
       String blobUrl, String tenantId, AuthenticatedUserRequest userRequest) {
@@ -160,11 +261,27 @@ public class AzureBlobStorePdao implements CloudFileReader {
 
   @Override
   public void validateUserCanRead(
-      List<String> sourcePaths, String cloudEncapsulationId, AuthenticatedUserRequest user) {
-    // This checked is not needed for Azure because we use signed URLS that by default check
-    // permissions
-    // Keeping this method because we do need to do this check for GCP in code that is shared
-    // between gcp and azure [See CloudFileReader]
+      List<String> sourcePaths,
+      String cloudEncapsulationId,
+      AuthenticatedUserRequest user,
+      Dataset dataset) {
+    // This check is not needed for Azure source files because we use signed URLS that by default
+    // check those permissions.  But this is needed if ingesting from GCS-hosted files.
+    List<String> gsPaths = sourcePaths.stream().filter(GcsUriUtils::isGsUri).toList();
+
+    // Extract the project ids from the userProject query parameter.  There can be 0 or 1 values
+    List<String> cloudEncapsulationIds =
+        gsPaths.stream()
+            .map(p -> UriUtils.getValueFromQueryParameter(p, USER_PROJECT_QUERY_PARAM))
+            .filter(Objects::nonNull)
+            .distinct()
+            .toList();
+    if (cloudEncapsulationIds.size() > 1) {
+      throw new IllegalArgumentException("Only a single billing project per ingest may be used");
+    }
+
+    gcsPdao.validateUserCanRead(
+        gsPaths, cloudEncapsulationIds.stream().findFirst().orElse(null), user, dataset);
   }
 
   public void writeBlobLines(String signedPath, List<String> lines) {
@@ -200,10 +317,10 @@ public class AzureBlobStorePdao implements CloudFileReader {
   public BlobContainerClientFactory buildSourceClientFactory(UUID tenantId, String blobUrl) {
     BlobUrlParts blobUrlParts = BlobUrlParts.parse(blobUrl);
     if (isSignedUrl(blobUrlParts)) {
-      return getSourceClientFactory(blobUrl);
+      return azureBlobService.getSourceClientFactory(blobUrl);
     } else {
       // Use application level authentication
-      return getSourceClientFactory(
+      return azureBlobService.getSourceClientFactory(
           blobUrlParts.getAccountName(),
           resourceConfiguration.getAppToken(tenantId),
           blobUrlParts.getBlobContainerName());
@@ -222,13 +339,12 @@ public class AzureBlobStorePdao implements CloudFileReader {
         getTargetDataClientFactory(
             profileModel,
             storageAccountResource,
-            ContainerType.DATA,
             new BlobSasTokenOptions(
                 DEFAULT_SAS_TOKEN_EXPIRATION,
                 new BlobSasPermission().setReadPermission(true).setDeletePermission(true),
                 userRequest.getEmail()));
     String blobName = getBlobName(fileId, fileName);
-    BlobCrl blobCrl = getBlobCrl(destinationClientFactory);
+    BlobCrl blobCrl = azureBlobService.getBlobCrl(destinationClientFactory);
     return blobCrl.deleteBlob(blobName);
   }
 
@@ -243,7 +359,6 @@ public class AzureBlobStorePdao implements CloudFileReader {
         getTargetDataClientFactory(
             profileModel,
             storageAccountResource,
-            ContainerType.DATA,
             new BlobSasTokenOptions(
                 DEFAULT_SAS_TOKEN_EXPIRATION,
                 new BlobSasPermission().setReadPermission(true).setDeletePermission(true),
@@ -257,7 +372,7 @@ public class AzureBlobStorePdao implements CloudFileReader {
               blobParts.getAccountName(), storageAccountResource.getName()));
     }
     String blobName = blobParts.getBlobName();
-    BlobCrl blobCrl = getBlobCrl(destinationClientFactory);
+    BlobCrl blobCrl = azureBlobService.getBlobCrl(destinationClientFactory);
     boolean success = blobCrl.deleteBlob(blobName);
     var parentBlob = Paths.get(blobName).getParent();
     if (parentBlob != null) {
@@ -268,17 +383,17 @@ public class AzureBlobStorePdao implements CloudFileReader {
     return success;
   }
 
-  public boolean deleteScratchParquet(
+  public boolean deleteBlobParquet(
+      FolderType folderType,
       String blobPath,
       AzureStorageAccountResource storageAccountResource,
       AuthenticatedUserRequest userRequest) {
-
     String blobUrl =
         String.format(
             "%s/%s/%s",
             storageAccountResource.getStorageAccountUrl(),
-            storageAccountResource.determineContainer(ContainerType.SCRATCH),
-            blobPath);
+            storageAccountResource.getTopLevelContainer(),
+            folderType.getPath(blobPath));
     BlobUrlParts blobParts = BlobUrlParts.parse(blobUrl);
 
     BillingProfileModel profileModel =
@@ -287,7 +402,6 @@ public class AzureBlobStorePdao implements CloudFileReader {
         getTargetDataClientFactory(
             profileModel,
             storageAccountResource,
-            ContainerType.SCRATCH,
             new BlobSasTokenOptions(
                 DEFAULT_SAS_TOKEN_EXPIRATION,
                 new BlobSasPermission()
@@ -297,9 +411,25 @@ public class AzureBlobStorePdao implements CloudFileReader {
                 userRequest.getEmail()));
 
     String blobName = blobParts.getBlobName();
-    BlobCrl blobCrl = getBlobCrl(destinationClientFactory);
+    BlobCrl blobCrl = azureBlobService.getBlobCrl(destinationClientFactory);
 
     return blobCrl.deleteBlobsWithPrefix(blobName);
+  }
+
+  public boolean deleteScratchParquet(
+      String blobPath,
+      AzureStorageAccountResource storageAccountResource,
+      AuthenticatedUserRequest userRequest) {
+
+    return deleteBlobParquet(FolderType.SCRATCH, blobPath, storageAccountResource, userRequest);
+  }
+
+  public boolean deleteMetadataParquet(
+      String blobPath,
+      AzureStorageAccountResource storageAccountResource,
+      AuthenticatedUserRequest userRequest) {
+
+    return deleteBlobParquet(FolderType.METADATA, blobPath, storageAccountResource, userRequest);
   }
 
   /**
@@ -309,7 +439,8 @@ public class AzureBlobStorePdao implements CloudFileReader {
    */
   public List<String> listChildren(String signedUrl) {
     var blobName = BlobUrlParts.parse(signedUrl).getBlobName();
-    return getSourceClientFactory(signedUrl)
+    return azureBlobService
+        .getSourceClientFactory(signedUrl)
         .getBlobContainerClient()
         // List children of the parquet directory
         .listBlobs(new ListBlobsOptions().setPrefix(blobName + "/"), Duration.ofMinutes(5))
@@ -319,19 +450,20 @@ public class AzureBlobStorePdao implements CloudFileReader {
         // Ignore the empty placeholder file
         .filter(n -> !n.endsWith("/_"))
         // Fully qualify the name by poor-man cloning the original URL and modifying the blob name
-        .map(n -> BlobUrlParts.parse(signedUrl).setBlobName(n).toUrl().toString())
-        .collect(Collectors.toList());
+        // Note: we can't use the BlobUrlParts URL builder since it encodes the blob name, which
+        // ends up being an invalid URL
+        .map(n -> BlobUrlParts.parse(signedUrl).setBlobName(n))
+        .map(AzureUriUtils::getUriFromBlobUrlParts)
+        .toList();
   }
 
   public String signFile(
       BillingProfileModel profileModel,
       AzureStorageAccountResource storageAccountResource,
       String url,
-      ContainerType containerType,
       BlobSasTokenOptions blobSasTokenOptions) {
     BlobContainerClientFactory destinationClientFactory =
-        getTargetDataClientFactory(
-            profileModel, storageAccountResource, containerType, blobSasTokenOptions);
+        getTargetDataClientFactory(profileModel, storageAccountResource, blobSasTokenOptions);
 
     BlobUrlParts blobParts = BlobUrlParts.parse(url);
     if (!blobParts.getAccountName().equals(storageAccountResource.getName())) {
@@ -373,13 +505,13 @@ public class AzureBlobStorePdao implements CloudFileReader {
   public BlobContainerClientFactory getTargetDataClientFactory(
       BillingProfileModel profileModel,
       AzureStorageAccountResource storageAccountResource,
-      ContainerType containerType,
       BlobSasTokenOptions blobSasTokenOptions) {
 
-    return new BlobContainerClientFactory(
+    String signedUrl =
         azureContainerPdao.getDestinationContainerSignedUrl(
-            profileModel, storageAccountResource, containerType, blobSasTokenOptions),
-        getRetryOptions());
+            profileModel, storageAccountResource, blobSasTokenOptions);
+
+    return azureBlobService.getSourceClientFactory(signedUrl);
   }
 
   public BlobUrlParts getOrSignUrlForSourceFactory(
@@ -414,18 +546,16 @@ public class AzureBlobStorePdao implements CloudFileReader {
       String dataSourceUrl,
       BillingProfileModel profileModel,
       AzureStorageAccountResource storageAccount,
-      ContainerType containerType,
       AuthenticatedUserRequest userRequest) {
     return BlobUrlParts.parse(
         getOrSignUrlStringForTargetFactory(
-            dataSourceUrl, profileModel, storageAccount, containerType, userRequest));
+            dataSourceUrl, profileModel, storageAccount, userRequest));
   }
 
   public String getOrSignUrlStringForTargetFactory(
       String dataSourceUrl,
       BillingProfileModel profileModel,
       AzureStorageAccountResource storageAccount,
-      ContainerType containerType,
       AuthenticatedUserRequest userRequest) {
     BlobUrlParts ingestControlFileBlobUrl = BlobUrlParts.parse(dataSourceUrl);
     String blobName = ingestControlFileBlobUrl.getBlobName();
@@ -441,26 +571,11 @@ public class AzureBlobStorePdao implements CloudFileReader {
             userRequest.getEmail());
 
     BlobContainerClientFactory targetDataClientFactory =
-        getTargetDataClientFactory(profileModel, storageAccount, containerType, options);
+        getTargetDataClientFactory(profileModel, storageAccount, options);
 
-    return targetDataClientFactory.getBlobSasUrlFactory().createSasUrlForBlob(blobName, options);
-  }
-
-  @VisibleForTesting
-  BlobCrl getBlobCrl(BlobContainerClientFactory destinationClientFactory) {
-    return new BlobCrl(destinationClientFactory);
-  }
-
-  @VisibleForTesting
-  BlobContainerClientFactory getSourceClientFactory(String url) {
-    return new BlobContainerClientFactory(url, getRetryOptions());
-  }
-
-  @VisibleForTesting
-  BlobContainerClientFactory getSourceClientFactory(
-      String accountName, TokenCredential azureCredential, String containerName) {
-    return new BlobContainerClientFactory(
-        accountName, azureCredential, containerName, getRetryOptions());
+    return AzureUriUtils.getUriFromBlobUrlParts(
+        BlobUrlParts.parse(
+            targetDataClientFactory.getBlobSasUrlFactory().createSasUrlForBlob(blobName, options)));
   }
 
   /** Detects if a URL is a signed URL */
@@ -473,6 +588,6 @@ public class AzureBlobStorePdao implements CloudFileReader {
   }
 
   private String getBlobName(String fileId, String fileName) {
-    return String.format("%s/%s", fileId, fileName);
+    return FolderType.DATA.getPath("%s/%s".formatted(fileId, fileName));
   }
 }
