@@ -3,14 +3,17 @@ package bio.terra.service.snapshot;
 import static java.util.Collections.singletonList;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.contains;
+import static org.hamcrest.Matchers.containsInAnyOrder;
 import static org.hamcrest.Matchers.empty;
 import static org.hamcrest.Matchers.equalTo;
 import static org.hamcrest.Matchers.greaterThan;
+import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.lessThan;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
+import static org.mockito.Mockito.when;
 
 import bio.terra.app.model.CloudRegion;
 import bio.terra.app.model.CloudResource;
@@ -20,40 +23,44 @@ import bio.terra.common.Column;
 import bio.terra.common.EmbeddedDatabaseTest;
 import bio.terra.common.MetadataEnumeration;
 import bio.terra.common.Relationship;
+import bio.terra.common.ResourceLocksUtils;
+import bio.terra.common.SqlSortDirection;
 import bio.terra.common.Table;
 import bio.terra.common.category.Unit;
+import bio.terra.common.fixtures.AuthenticationFixtures;
+import bio.terra.common.fixtures.DaoOperations;
 import bio.terra.common.fixtures.JsonLoader;
-import bio.terra.common.fixtures.ProfileFixtures;
-import bio.terra.common.fixtures.ResourceFixtures;
 import bio.terra.common.iam.AuthenticatedUserRequest;
-import bio.terra.model.BillingProfileModel;
 import bio.terra.model.CloudPlatform;
 import bio.terra.model.DatasetPatchRequestModel;
-import bio.terra.model.DatasetRequestModel;
 import bio.terra.model.DuosFirecloudGroupModel;
 import bio.terra.model.EnumerateSortByParam;
+import bio.terra.model.ResourceCreateTags;
 import bio.terra.model.SnapshotPatchRequestModel;
 import bio.terra.model.SnapshotRequestModel;
-import bio.terra.model.SqlSortDirection;
+import bio.terra.service.auth.iam.IamService;
 import bio.terra.service.auth.ras.RasDbgapPermissions;
 import bio.terra.service.dataset.Dataset;
 import bio.terra.service.dataset.DatasetDao;
-import bio.terra.service.dataset.DatasetUtils;
 import bio.terra.service.dataset.StorageResource;
+import bio.terra.service.duos.DuosClient;
 import bio.terra.service.duos.DuosDao;
+import bio.terra.service.duos.DuosService;
+import bio.terra.service.filedata.DrsDao;
+import bio.terra.service.filedata.DrsId;
+import bio.terra.service.filedata.DrsIdService;
 import bio.terra.service.profile.ProfileDao;
-import bio.terra.service.resourcemanagement.google.GoogleProjectResource;
 import bio.terra.service.resourcemanagement.google.GoogleResourceDao;
-import bio.terra.service.snapshot.exception.MissingRowCountsException;
+import bio.terra.service.snapshot.exception.SnapshotNotFoundException;
 import bio.terra.service.snapshot.exception.SnapshotUpdateException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 import java.util.function.Function;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 import org.junit.After;
 import org.junit.Before;
 import org.junit.Test;
@@ -62,6 +69,7 @@ import org.junit.runner.RunWith;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.boot.test.mock.mockito.MockBean;
 import org.springframework.test.context.ActiveProfiles;
 import org.springframework.test.context.junit4.SpringRunner;
 
@@ -75,6 +83,8 @@ public class SnapshotDaoTest {
 
   @Autowired private SnapshotDao snapshotDao;
 
+  @Autowired private SnapshotTableDao snapshotTableDao;
+
   @Autowired private DatasetDao datasetDao;
 
   @Autowired private ProfileDao profileDao;
@@ -87,11 +97,20 @@ public class SnapshotDaoTest {
 
   @Autowired private DuosDao duosDao;
 
+  @Autowired private DrsDao drsDao;
+
+  @Autowired private DaoOperations daoOperations;
+
+  @MockBean private DuosClient duosClient;
+
+  @MockBean private DuosService duosService;
+
+  @MockBean private IamService iamService;
+
   private Dataset dataset;
   private UUID datasetId;
   private SnapshotRequestModel snapshotRequest;
-  private UUID snapshotId;
-  private List<UUID> snapshotIdList;
+  private List<UUID> snapshotIds;
   private List<UUID> datasetIds;
   private UUID profileId;
   private UUID projectId;
@@ -99,114 +118,87 @@ public class SnapshotDaoTest {
   private String duosId;
 
   private static final AuthenticatedUserRequest TEST_USER =
-      AuthenticatedUserRequest.builder()
-          .setSubjectId("DatasetUnit")
-          .setEmail("dataset@unit.com")
-          .setToken("token")
-          .build();
+      AuthenticationFixtures.randomUserRequest();
 
   @Before
   public void setup() throws Exception {
-    BillingProfileModel billingProfile =
-        profileDao.createBillingProfile(ProfileFixtures.randomBillingProfileRequest(), "hi@hi.hi");
-    profileId = billingProfile.getId();
-
-    GoogleProjectResource projectResource = ResourceFixtures.randomProjectResource(billingProfile);
-    projectId = resourceDao.createProject(projectResource);
-
-    DatasetRequestModel datasetRequest =
-        jsonLoader.loadObject(
-            "snapshot-test-dataset-with-multi-columns.json", DatasetRequestModel.class);
-    datasetRequest
-        .name(datasetRequest.getName() + UUID.randomUUID())
-        .defaultProfileId(profileId)
-        .cloudPlatform(CloudPlatform.GCP);
-
-    dataset = DatasetUtils.convertRequestWithGeneratedNames(datasetRequest);
-    dataset.projectResourceId(projectId);
-
-    String createFlightId = UUID.randomUUID().toString();
-    datasetId = UUID.randomUUID();
-    dataset.id(datasetId);
-    datasetDao.createAndLock(dataset, createFlightId, TEST_USER);
-    datasetDao.unlockExclusive(dataset.getId(), createFlightId);
-    dataset = datasetDao.retrieve(datasetId);
+    dataset = daoOperations.createDataset("snapshot-test-dataset-with-multi-columns.json");
+    datasetId = dataset.getId();
+    projectId = dataset.getProjectResourceId();
+    profileId = dataset.getDefaultProfileId();
 
     snapshotRequest =
-        jsonLoader
-            .loadObject("snapshot-test-snapshot.json", SnapshotRequestModel.class)
-            .profileId(profileId);
-    snapshotRequest.getContents().get(0).setDatasetName(dataset.getName());
+        daoOperations.createSnapshotRequestFromDataset(dataset, "snapshot-test-snapshot.json");
 
-    // Populate the snapshotId with random; delete should quietly not find it.
-    snapshotId = UUID.randomUUID();
+    snapshotIds = new ArrayList<>();
     datasetIds = new ArrayList<>();
 
     duosId = UUID.randomUUID().toString();
     duosFirecloudGroupId =
-        duosDao.insertFirecloudGroup(
-            new DuosFirecloudGroupModel()
-                .duosId(duosId)
-                .firecloudGroupName("firecloudGroupName")
-                .firecloudGroupEmail("firecloudGroupEmail"));
+        duosDao
+            .insertAndRetrieveFirecloudGroup(
+                new DuosFirecloudGroupModel()
+                    .duosId(duosId)
+                    .firecloudGroupName("firecloudGroupName")
+                    .firecloudGroupEmail("firecloudGroupEmail"))
+            .getId();
   }
 
   @After
   public void teardown() throws Exception {
-    if (snapshotIdList != null) {
-      for (UUID id : snapshotIdList) {
-        snapshotDao.delete(id, TEST_USER);
+    if (snapshotIds != null) {
+      for (UUID id : snapshotIds) {
+        snapshotDao.delete(id);
       }
-      snapshotIdList = null;
     }
-    snapshotDao.delete(snapshotId, TEST_USER);
-    datasetDao.delete(datasetId, TEST_USER);
+    datasetDao.delete(datasetId);
     resourceDao.deleteProject(projectId);
     profileDao.deleteBillingProfileById(profileId);
     duosDao.deleteFirecloudGroup(duosFirecloudGroupId);
   }
 
-  @Test(expected = MissingRowCountsException.class)
-  public void testMissingRowCounts() throws Exception {
-    Snapshot snapshot = snapshotService.makeSnapshotFromSnapshotRequest(snapshotRequest);
-    snapshot.projectResourceId(projectId);
-    snapshotDao.updateSnapshotTableRowCounts(snapshot, Collections.emptyMap());
+  private Snapshot createSnapshot(SnapshotRequestModel request) {
+    Snapshot snapshot = daoOperations.createSnapshotFromSnapshotRequest(request, dataset);
+    return insertAndRetrieveSnapshot(snapshot);
   }
 
-  private Snapshot insertAndRetrieveSnapshot(Snapshot snapshot, String flightId) {
-    snapshotDao.createAndLock(snapshot, flightId, TEST_USER);
-    snapshotDao.unlock(snapshotId, flightId);
-    return snapshotDao.retrieveSnapshot(snapshotId);
+  private Snapshot insertAndRetrieveSnapshot(Snapshot snapshot) {
+    snapshotIds.add(snapshot.getId());
+    return daoOperations.ingestSnapshot(snapshot);
+  }
+
+  @Test
+  public void testRetrieveSnapshotsForDataset() {
+    snapshotRequest.name(snapshotRequest.getName() + UUID.randomUUID());
+    createSnapshot(snapshotRequest);
+    List<SnapshotSummary> snapshots = snapshotDao.retrieveSnapshotsForDataset(datasetId);
+    assertThat("there should exist one snapshot", snapshots, hasSize(1));
   }
 
   @Test
   public void happyInOutTest() {
     snapshotRequest.name(snapshotRequest.getName() + UUID.randomUUID());
 
-    Snapshot snapshot =
-        snapshotService
-            .makeSnapshotFromSnapshotRequest(snapshotRequest)
-            .projectResourceId(projectId)
-            .id(snapshotId);
-    Snapshot fromDB = insertAndRetrieveSnapshot(snapshot, "happyInOutTest_flightId");
-    assertThat("snapshot name set correctly", fromDB.getName(), equalTo(snapshot.getName()));
+    Snapshot snapshot = daoOperations.createSnapshotFromSnapshotRequest(snapshotRequest, dataset);
+    Snapshot fromDb = insertAndRetrieveSnapshot(snapshot);
+    assertThat("snapshot name set correctly", fromDb.getName(), equalTo(snapshot.getName()));
 
     assertThat(
         "snapshot description set correctly",
-        fromDB.getDescription(),
+        fromDb.getDescription(),
         equalTo(snapshot.getDescription()));
 
-    assertThat("correct number of tables created", fromDB.getTables().size(), equalTo(2));
+    assertThat("correct number of tables created", fromDb.getTables(), hasSize(2));
 
-    assertThat("correct number of sources created", fromDB.getSnapshotSources().size(), equalTo(1));
+    assertThat("correct number of sources created", fromDb.getSnapshotSources(), hasSize(1));
 
     assertThat(
         "snapshot creation information set correctly",
-        fromDB.getCreationInformation(),
+        fromDb.getCreationInformation(),
         equalTo(snapshot.getCreationInformation()));
 
     // verify source and map
-    SnapshotSource source = fromDB.getFirstSnapshotSource();
+    SnapshotSource source = fromDb.getFirstSnapshotSource();
     assertThat(
         "source points back to snapshot", source.getSnapshot().getId(), equalTo(snapshot.getId()));
 
@@ -222,29 +214,21 @@ public class SnapshotDaoTest {
         source.getAssetSpecification().getId(),
         equalTo(dataset.getAssetSpecifications().get(0).getId()));
 
-    assertThat("correct number of map tables", source.getSnapshotMapTables().size(), equalTo(2));
+    assertThat("correct number of map tables", source.getSnapshotMapTables(), hasSize(2));
 
     // Verify map table
     SnapshotMapTable mapTable =
         source.getSnapshotMapTables().stream()
             .filter(t -> t.getFromTable().getName().equals("thetable"))
             .findFirst()
-            .orElseThrow(AssertionError::new);
+            .orElseThrow();
     Table datasetTable =
         dataset.getTables().stream()
             .filter(t -> t.getName().equals("thetable"))
             .findFirst()
-            .orElseThrow(AssertionError::new);
-    Table snapshotTable1 =
-        snapshot.getTables().stream()
-            .filter(t -> t.getName().equals("thetable"))
-            .findFirst()
-            .orElseThrow(AssertionError::new);
-    Table snapshotTable2 =
-        snapshot.getTables().stream()
-            .filter(t -> t.getName().equals("anothertable"))
-            .findFirst()
-            .orElseThrow(AssertionError::new);
+            .orElseThrow();
+    SnapshotTable snapshotTable1 = fromDb.getTableByName("thetable").orElseThrow();
+    SnapshotTable snapshotTable2 = fromDb.getTableByName("anothertable").orElseThrow();
 
     assertThat(
         "correct map table dataset table",
@@ -256,8 +240,7 @@ public class SnapshotDaoTest {
         mapTable.getToTable().getId(),
         equalTo(snapshotTable1.getId()));
 
-    assertThat(
-        "correct number of map columns", mapTable.getSnapshotMapColumns().size(), equalTo(3));
+    assertThat("correct number of map columns", mapTable.getSnapshotMapColumns(), hasSize(3));
 
     // Verify map columns
     SnapshotMapColumn mapColumn = mapTable.getSnapshotMapColumns().get(0);
@@ -274,8 +257,8 @@ public class SnapshotDaoTest {
         mapColumn.getToColumn().getId(),
         equalTo(snapshotColumn.getId()));
 
-    List<Relationship> relationships = fromDB.getRelationships();
-    assertThat("a relationship comes back", relationships.size(), equalTo(1));
+    List<Relationship> relationships = fromDb.getRelationships();
+    assertThat("a relationship comes back", relationships, hasSize(1));
     Relationship relationship = relationships.get(0);
     Table fromTable = relationship.getFromTable();
     Column fromColumn = relationship.getFromColumn();
@@ -293,41 +276,56 @@ public class SnapshotDaoTest {
     // Verify snapshot column orders
     assertThat(
         "First table columns are in ascending order of name",
-        snapshotTable1.getColumns().stream().map(Column::getName).collect(Collectors.toList()),
+        snapshotTable1.getColumns().stream().map(Column::getName).toList(),
         contains("thecolumn1", "thecolumn2", "thecolumn3"));
 
     assertThat(
         "Second table columns are in descending order of name",
-        snapshotTable2.getColumns().stream().map(Column::getName).collect(Collectors.toList()),
+        snapshotTable2.getColumns().stream().map(Column::getName).toList(),
         contains("anothercolumn3", "anothercolumn2", "anothercolumn1"));
+
+    // Verify snapshot column can be fetched by individual table
+    assertThat(
+        "First table columns can be fetched",
+        snapshotTableDao.retrieveColumns(snapshotTable1),
+        equalTo(snapshotTable1.getColumns()));
+
+    assertThat(
+        "Second table columns can be fetched",
+        snapshotTableDao.retrieveColumns(snapshotTable2),
+        equalTo(snapshotTable2.getColumns()));
   }
 
   @Test
-  public void snapshotEnumerateTest() throws Exception {
-    snapshotIdList = new ArrayList<>();
-    String snapshotName = snapshotRequest.getName() + UUID.randomUUID().toString();
+  public void snapshotEnumerateTest() {
+    String snapshotName = snapshotRequest.getName() + UUID.randomUUID();
+    ResourceCreateTags tags = new ResourceCreateTags();
+    tags.addAll(List.of("a tag", "A TAG"));
 
     for (int i = 0; i < 6; i++) {
       snapshotRequest
           .name(makeName(snapshotName, i))
           // set the description to a random string so we can verify the sorting is working
-          // independently of the
-          // dataset name or created_date. add a suffix to filter on for the even snapshots
-          .description(UUID.randomUUID().toString() + ((i % 2 == 0) ? "==foo==" : ""));
-      String flightId = "snapshotEnumerateTest_flightId";
-      UUID tempSnapshotId = UUID.randomUUID();
-      Snapshot snapshot =
-          snapshotService
-              .makeSnapshotFromSnapshotRequest(snapshotRequest)
-              .projectResourceId(projectId)
-              .id(tempSnapshotId);
-      snapshotDao.createAndLock(snapshot, flightId, TEST_USER);
-
-      snapshotDao.unlock(tempSnapshotId, flightId);
-      snapshotIdList.add(tempSnapshotId);
+          // independently of the dataset name or created_date. add a suffix to filter on
+          // for the even snapshots
+          .description(UUID.randomUUID() + ((i % 2 == 0) ? "==foo==" : ""));
+      if (i == 0) {
+        // Only tag our first snapshot
+        snapshotRequest.tags(tags);
+      } else {
+        snapshotRequest.tags(null);
+      }
+      Snapshot snapshot = createSnapshot(snapshotRequest);
+      // set a DUOS ID on the first 2 snapshots
+      if (i <= 1) {
+        DuosFirecloudGroupModel duosGroupMode = duosDao.retrieveFirecloudGroupByDuosId(duosId);
+        when(duosService.syncDuosDatasetAuthorizedUsers(duosId)).thenReturn(duosGroupMode);
+        snapshotService.updateSnapshotDuosDataset(snapshot.getId(), TEST_USER, duosId);
+      }
     }
     MetadataEnumeration<SnapshotSummary> allSnapshots =
-        snapshotDao.retrieveSnapshots(0, 6, null, null, null, null, datasetIds, snapshotIdList);
+        snapshotDao.retrieveSnapshots(
+            0, 6, null, null, null, null, datasetIds, snapshotIds, null, null);
 
     for (var snapshotSummary : allSnapshots.getItems()) {
       assertThat(
@@ -338,22 +336,42 @@ public class SnapshotDaoTest {
           "snapshot summary has a data project", snapshotSummary.getDataProject(), notNullValue());
     }
 
-    testOneEnumerateRange(snapshotIdList, snapshotName, 0, 1000);
-    testOneEnumerateRange(snapshotIdList, snapshotName, 1, 3);
-    testOneEnumerateRange(snapshotIdList, snapshotName, 3, 5);
-    testOneEnumerateRange(snapshotIdList, snapshotName, 4, 7);
+    testOneEnumerateRange(snapshotName, 0, 1000);
+    testOneEnumerateRange(snapshotName, 1, 3);
+    testOneEnumerateRange(snapshotName, 3, 5);
+    testOneEnumerateRange(snapshotName, 4, 7);
 
-    testSortingNames(snapshotIdList, snapshotName, 0, 10, SqlSortDirection.ASC);
-    testSortingNames(snapshotIdList, snapshotName, 0, 3, SqlSortDirection.ASC);
-    testSortingNames(snapshotIdList, snapshotName, 1, 3, SqlSortDirection.ASC);
-    testSortingNames(snapshotIdList, snapshotName, 2, 5, SqlSortDirection.ASC);
-    testSortingNames(snapshotIdList, snapshotName, 0, 10, SqlSortDirection.DESC);
-    testSortingNames(snapshotIdList, snapshotName, 0, 3, SqlSortDirection.DESC);
-    testSortingNames(snapshotIdList, snapshotName, 1, 3, SqlSortDirection.DESC);
-    testSortingNames(snapshotIdList, snapshotName, 2, 5, SqlSortDirection.DESC);
+    testSortingNames(snapshotName, 0, 10, SqlSortDirection.ASC);
+    testSortingNames(snapshotName, 0, 3, SqlSortDirection.ASC);
+    testSortingNames(snapshotName, 1, 3, SqlSortDirection.ASC);
+    testSortingNames(snapshotName, 2, 5, SqlSortDirection.ASC);
+    testSortingNames(snapshotName, 0, 10, SqlSortDirection.DESC);
+    testSortingNames(snapshotName, 0, 3, SqlSortDirection.DESC);
+    testSortingNames(snapshotName, 1, 3, SqlSortDirection.DESC);
+    testSortingNames(snapshotName, 2, 5, SqlSortDirection.DESC);
 
-    testSortingDescriptions(snapshotIdList, SqlSortDirection.DESC);
-    testSortingDescriptions(snapshotIdList, SqlSortDirection.ASC);
+    testSortingDescriptions(SqlSortDirection.DESC);
+    testSortingDescriptions(SqlSortDirection.ASC);
+
+    SnapshotSummary snapshotSummary = allSnapshots.getItems().get(0);
+    MetadataEnumeration<SnapshotSummary> filterIdEnum =
+        snapshotDao.retrieveSnapshots(
+            0,
+            6,
+            null,
+            null,
+            snapshotSummary.getId().toString(),
+            null,
+            datasetIds,
+            snapshotIds,
+            null,
+            null);
+    List<SnapshotSummary> filteredSnapshotsById = filterIdEnum.getItems();
+    assertThat("snapshot filter by id returns one snapshot", filteredSnapshotsById, hasSize(1));
+    assertThat(
+        "snapshot filter by id returns one snapshot",
+        filteredSnapshotsById.get(0).getId(),
+        equalTo(snapshotSummary.getId()));
 
     MetadataEnumeration<SnapshotSummary> filterDefaultRegionEnum =
         snapshotDao.retrieveSnapshots(
@@ -364,12 +382,14 @@ public class SnapshotDaoTest {
             null,
             GoogleRegion.DEFAULT_GOOGLE_REGION.toString(),
             datasetIds,
-            snapshotIdList);
+            snapshotIds,
+            null,
+            null);
     List<SnapshotSummary> filteredRegionSnapshots = filterDefaultRegionEnum.getItems();
     assertThat(
         "snapshot filter by default GCS region returns correct total",
-        filteredRegionSnapshots.size(),
-        equalTo(snapshotIdList.size()));
+        filteredRegionSnapshots,
+        hasSize(snapshotIds.size()));
     for (SnapshotSummary s : filteredRegionSnapshots) {
       Snapshot snapshot = snapshotDao.retrieveSnapshot(s.getId());
       assertTrue(
@@ -390,12 +410,14 @@ public class SnapshotDaoTest {
             makeName(snapshotName, 0),
             GoogleRegion.DEFAULT_GOOGLE_REGION.toString(),
             datasetIds,
-            snapshotIdList);
+            snapshotIds,
+            null,
+            null);
     List<SnapshotSummary> filteredNameAndRegionSnapshots = filterNameAndRegionEnum.getItems();
     assertThat(
         "snapshot filter by name and region returns correct total",
-        filteredNameAndRegionSnapshots.size(),
-        equalTo(1));
+        filteredNameAndRegionSnapshots,
+        hasSize(1));
     assertThat(
         "snapshot filter by name and region returns correct snapshot name",
         filteredNameAndRegionSnapshots.get(0).getName(),
@@ -410,43 +432,7 @@ public class SnapshotDaoTest {
               .getDatasetSummary()
               .datasetStorageContainsRegion(GoogleRegion.DEFAULT_GOOGLE_REGION));
 
-      // Test retrieve SnapshotProject object
-      SnapshotProject snapshotProject = snapshotDao.retrieveSnapshotProject(s.getId(), true);
-      assertThat("snapshot project id matches", snapshotProject.getId(), equalTo(s.getId()));
-      assertThat("snapshot project name matches", snapshotProject.getName(), equalTo(s.getName()));
-      assertThat(
-          "snapshot project profile id matches",
-          snapshotProject.getProfileId(),
-          equalTo(snapshot.getProfileId()));
-      assertThat(
-          "snapshot project data project name matches",
-          snapshotProject.getDataProject(),
-          equalTo(snapshot.getProjectResource().getGoogleProjectId()));
-      assertThat(
-          "snapshot project has a single source dataset",
-          snapshotProject.getSourceDatasetProjects().size(),
-          equalTo(1));
-      assertThat(
-          "dataset project id matches",
-          snapshotProject.getFirstSourceDatasetProject().getId(),
-          equalTo(snapshot.getSourceDataset().getId()));
-      assertThat(
-          "dataset project name matches",
-          snapshotProject.getFirstSourceDatasetProject().getName(),
-          equalTo(snapshot.getSourceDataset().getName()));
-      assertThat(
-          "dataset project profile id matches",
-          snapshotProject.getFirstSourceDatasetProject().getProfileId(),
-          equalTo(snapshot.getSourceDataset().getProjectResource().getProfileId()));
-      assertThat(
-          "dataset project data project name matches",
-          snapshotProject.getFirstSourceDatasetProject().getDataProject(),
-          equalTo(
-              snapshot
-                  .getFirstSnapshotSource()
-                  .getDataset()
-                  .getProjectResource()
-                  .getGoogleProjectId()));
+      verifySnapshotProject(snapshot);
     }
 
     MetadataEnumeration<SnapshotSummary> summaryEnum =
@@ -458,36 +444,160 @@ public class SnapshotDaoTest {
             "==foo==",
             null,
             datasetIds,
-            snapshotIdList);
+            snapshotIds,
+            null,
+            null);
     List<SnapshotSummary> summaryList = summaryEnum.getItems();
-    assertThat("filtered and retrieved 2 snapshots", summaryList.size(), equalTo(2));
+    assertThat("filtered and retrieved 2 snapshots", summaryList, hasSize(2));
     assertThat("filtered total 3", summaryEnum.getFilteredTotal(), equalTo(3));
     assertThat("total 6", summaryEnum.getTotal(), equalTo(6));
     for (int i = 0; i < 2; i++) {
-      assertThat(
-          "first 2 ids match", snapshotIdList.get(i * 2), equalTo(summaryList.get(i).getId()));
+      assertThat("first 2 ids match", snapshotIds.get(i * 2), equalTo(summaryList.get(i).getId()));
     }
 
     MetadataEnumeration<SnapshotSummary> emptyEnum =
-        snapshotDao.retrieveSnapshots(0, 6, null, null, "__", null, datasetIds, snapshotIdList);
-    assertThat("underscores don't act as wildcards", emptyEnum.getItems().size(), equalTo(0));
+        snapshotDao.retrieveSnapshots(
+            0, 6, null, null, "__", null, datasetIds, snapshotIds, null, null);
+    assertThat("underscores don't act as wildcards", emptyEnum.getItems(), empty());
 
     MetadataEnumeration<SnapshotSummary> summaryEnum0 =
-        snapshotDao.retrieveSnapshots(0, 10, null, null, null, null, datasetIds, snapshotIdList);
+        snapshotDao.retrieveSnapshots(
+            0, 10, null, null, null, null, datasetIds, snapshotIds, null, null);
     assertThat("no dataset uuid gives all snapshots", summaryEnum0.getTotal(), equalTo(6));
 
     // use the original dataset id and make sure you get all snapshots
     datasetIds = singletonList(datasetId);
     MetadataEnumeration<SnapshotSummary> summaryEnum1 =
-        snapshotDao.retrieveSnapshots(0, 10, null, null, null, null, datasetIds, snapshotIdList);
+        snapshotDao.retrieveSnapshots(
+            0, 10, null, null, null, null, datasetIds, snapshotIds, null, null);
     assertThat(
         "expected dataset uuid gives expected snapshot", summaryEnum1.getTotal(), equalTo(6));
 
     // made a random dataset uuid and made sure that you get no snapshots
     List<UUID> datasetIdsBad = singletonList(UUID.randomUUID());
     MetadataEnumeration<SnapshotSummary> summaryEnum2 =
-        snapshotDao.retrieveSnapshots(0, 10, null, null, null, null, datasetIdsBad, snapshotIdList);
+        snapshotDao.retrieveSnapshots(
+            0, 10, null, null, null, null, datasetIdsBad, snapshotIds, null, null);
     assertThat("dummy dataset uuid gives no snapshots", summaryEnum2.getTotal(), equalTo(0));
+
+    // Test filtering by tags
+
+    // Filtering on all tags for a snapshot returns the snapshot
+    MetadataEnumeration<SnapshotSummary> filteredAllTagsMatchEnum =
+        snapshotDao.retrieveSnapshots(
+            0, 6, null, null, null, null, datasetIds, snapshotIds, tags, null);
+    List<SnapshotSummary> filteredAllTagsMatchSnapshots = filteredAllTagsMatchEnum.getItems();
+    assertThat(
+        "snapshot filter by tags returns correct filtered total",
+        filteredAllTagsMatchSnapshots,
+        hasSize(1));
+    assertThat(
+        "snapshot filter by tags returns correct snapshot",
+        filteredAllTagsMatchSnapshots.get(0).getId(),
+        equalTo(snapshotIds.get(0)));
+    assertThat(
+        "snapshot filter by tags returns correct total",
+        filteredAllTagsMatchEnum.getTotal(),
+        equalTo(6));
+
+    // Test filtering on DUOS IDs
+    MetadataEnumeration<SnapshotSummary> filteredDuosIdsMatchEnum =
+        snapshotDao.retrieveSnapshots(
+            0, 6, null, null, null, null, datasetIds, snapshotIds, null, List.of(duosId));
+    List<SnapshotSummary> filteredDuosIdsMatchSnapshots = filteredDuosIdsMatchEnum.getItems();
+    assertThat(
+        "snapshot filter by duosid returns correct filtered total",
+        filteredDuosIdsMatchSnapshots,
+        hasSize(2));
+    assertThat(
+        "snapshot filter by duosid returns correct snapshot",
+        filteredDuosIdsMatchSnapshots.stream().map(SnapshotSummary::getId).sorted().toList(),
+        equalTo(snapshotIds.subList(0, 2).stream().sorted().toList()));
+    assertThat(
+        "each returned snapshot has the correct duos id",
+        filteredDuosIdsMatchSnapshots.stream().map(SnapshotSummary::getDuosId).distinct().toList(),
+        equalTo(List.of(duosId)));
+    assertThat(
+        "snapshot filter by tags returns correct total",
+        filteredDuosIdsMatchEnum.getTotal(),
+        equalTo(6));
+
+    // Filtering on a strict subset of tags for a dataset returns the dataset
+    tags.forEach(
+        tag -> {
+          MetadataEnumeration<SnapshotSummary> filteredSubsetTagsMatchEnum =
+              snapshotDao.retrieveSnapshots(
+                  0, 6, null, null, null, null, datasetIds, snapshotIds, List.of(tag), null);
+          List<SnapshotSummary> filteredSubsetTagsMatchSnapshots =
+              filteredSubsetTagsMatchEnum.getItems();
+          assertThat(
+              "snapshot filter by tags returns correct filtered total",
+              filteredSubsetTagsMatchSnapshots,
+              hasSize(1));
+          assertThat(
+              "snapshot filter by tags returns correct snapshot",
+              filteredSubsetTagsMatchSnapshots.get(0).getId(),
+              equalTo(snapshotIds.get(0)));
+          assertThat(
+              "snapshot filter by tags returns correct total",
+              filteredSubsetTagsMatchEnum.getTotal(),
+              equalTo(6));
+        });
+
+    // If even one specified tag is not found on the snapshot, it's not returned, even if other
+    // matching tags are included
+    tags.add(UUID.randomUUID().toString());
+    MetadataEnumeration<SnapshotSummary> incompleteTagMatchEnum =
+        snapshotDao.retrieveSnapshots(
+            0, 6, null, null, null, null, datasetIds, snapshotIds, tags, null);
+    assertThat(
+        "snapshot filter by tags excludes snapshot which do not match filter completely",
+        incompleteTagMatchEnum.getItems(),
+        empty());
+    assertThat(
+        "snapshot filter by tags returns correct total",
+        incompleteTagMatchEnum.getTotal(),
+        equalTo(6));
+  }
+
+  private void verifySnapshotProject(Snapshot snapshot) {
+    SnapshotProject snapshotProject = snapshotDao.retrieveSnapshotProject(snapshot.getId());
+    assertThat("snapshot project id matches", snapshotProject.getId(), equalTo(snapshot.getId()));
+    assertThat(
+        "snapshot project name matches", snapshotProject.getName(), equalTo(snapshot.getName()));
+    assertThat(
+        "snapshot project profile id matches",
+        snapshotProject.getProfileId(),
+        equalTo(snapshot.getProfileId()));
+    assertThat(
+        "snapshot project data project name matches",
+        snapshotProject.getDataProject(),
+        equalTo(snapshot.getProjectResource().getGoogleProjectId()));
+    assertThat(
+        "snapshot project has a single source dataset",
+        snapshotProject.getSourceDatasetProjects(),
+        hasSize(1));
+    assertThat(
+        "dataset project id matches",
+        snapshotProject.getFirstSourceDatasetProject().getId(),
+        equalTo(snapshot.getSourceDataset().getId()));
+    assertThat(
+        "dataset project name matches",
+        snapshotProject.getFirstSourceDatasetProject().getName(),
+        equalTo(snapshot.getSourceDataset().getName()));
+    assertThat(
+        "dataset project profile id matches",
+        snapshotProject.getFirstSourceDatasetProject().getProfileId(),
+        equalTo(snapshot.getSourceDataset().getProjectResource().getProfileId()));
+    assertThat(
+        "dataset project data project name matches",
+        snapshotProject.getFirstSourceDatasetProject().getDataProject(),
+        equalTo(
+            snapshot
+                .getFirstSnapshotSource()
+                .getDataset()
+                .getProjectResource()
+                .getGoogleProjectId()));
   }
 
   private String makeName(String baseName, int index) {
@@ -495,11 +605,7 @@ public class SnapshotDaoTest {
   }
 
   private void testSortingNames(
-      List<UUID> snapshotIds,
-      String snapshotName,
-      int offset,
-      int limit,
-      SqlSortDirection direction) {
+      String snapshotName, int offset, int limit, SqlSortDirection direction) {
     MetadataEnumeration<SnapshotSummary> summaryEnum =
         snapshotDao.retrieveSnapshots(
             offset,
@@ -509,7 +615,9 @@ public class SnapshotDaoTest {
             null,
             null,
             datasetIds,
-            snapshotIds);
+            snapshotIds,
+            null,
+            null);
     List<SnapshotSummary> summaryList = summaryEnum.getItems();
     int index = (direction.equals(SqlSortDirection.ASC)) ? offset : snapshotIds.size() - offset - 1;
     for (SnapshotSummary summary : summaryList) {
@@ -519,10 +627,19 @@ public class SnapshotDaoTest {
     }
   }
 
-  private void testSortingDescriptions(List<UUID> snapshotIds, SqlSortDirection direction) {
+  private void testSortingDescriptions(SqlSortDirection direction) {
     MetadataEnumeration<SnapshotSummary> summaryEnum =
         snapshotDao.retrieveSnapshots(
-            0, 6, EnumerateSortByParam.DESCRIPTION, direction, null, null, datasetIds, snapshotIds);
+            0,
+            6,
+            EnumerateSortByParam.DESCRIPTION,
+            direction,
+            null,
+            null,
+            datasetIds,
+            snapshotIds,
+            null,
+            null);
     List<SnapshotSummary> summaryList = summaryEnum.getItems();
     assertThat("the full list comes back", summaryList.size(), equalTo(6));
     String previous = summaryList.get(0).getDescription();
@@ -537,8 +654,7 @@ public class SnapshotDaoTest {
     }
   }
 
-  private void testOneEnumerateRange(
-      List<UUID> snapshotIds, String snapshotName, int offset, int limit) {
+  private void testOneEnumerateRange(String snapshotName, int offset, int limit) {
     // We expect the snapshots to be returned in their created order
     MetadataEnumeration<SnapshotSummary> summaryEnum =
         snapshotDao.retrieveSnapshots(
@@ -549,7 +665,9 @@ public class SnapshotDaoTest {
             null,
             null,
             datasetIds,
-            snapshotIds);
+            snapshotIds,
+            null,
+            null);
     List<SnapshotSummary> summaryList = summaryEnum.getItems();
     int index = offset;
     for (SnapshotSummary summary : summaryList) {
@@ -578,114 +696,106 @@ public class SnapshotDaoTest {
   }
 
   @Test
-  public void testPatchSnapshotConsentCodeAndDescription() throws Exception {
+  public void testPatchSnapshotConsentCodeAndDescription() {
     String defaultSnapshotDescription = "A meaningful description of a snapshot.";
-    snapshotRequest.name(snapshotRequest.getName() + UUID.randomUUID());
-    snapshotRequest.description(defaultSnapshotDescription);
+    snapshotRequest
+        .name(snapshotRequest.getName() + UUID.randomUUID())
+        .description(defaultSnapshotDescription);
 
-    Snapshot snapshot =
-        snapshotService
-            .makeSnapshotFromSnapshotRequest(snapshotRequest)
-            .projectResourceId(projectId)
-            .id(snapshotId);
-    String flightId = UUID.randomUUID().toString();
-    snapshotDao.createAndLock(snapshot, flightId, TEST_USER);
-    snapshotDao.unlock(snapshotId, flightId);
+    Snapshot created = createSnapshot(snapshotRequest);
+    UUID snapshotId = created.getId();
 
-    assertThat(
-        "snapshot's consent code is null before patch",
-        snapshotDao.retrieveSnapshot(snapshotId).getConsentCode(),
-        equalTo(null));
-
+    assertNull("snapshot's consent code is null before patch", created.getConsentCode());
     assertThat(
         "snapshot's default description is correct before any patch",
-        snapshotDao.retrieveSnapshot(snapshotId).getDescription(),
+        created.getDescription(),
         equalTo(defaultSnapshotDescription));
 
     String consentCodeSet = "c01";
     SnapshotPatchRequestModel patchRequestSet =
         new SnapshotPatchRequestModel().consentCode(consentCodeSet);
     snapshotDao.patch(snapshotId, patchRequestSet, TEST_USER);
+    Snapshot snapshotConsentCodeSet = snapshotDao.retrieveSnapshot(snapshotId);
     assertThat(
         "snapshot's consent code is set from patch",
-        snapshotDao.retrieveSnapshot(snapshotId).getConsentCode(),
+        snapshotConsentCodeSet.getConsentCode(),
         equalTo(consentCodeSet));
-
     assertThat(
         "snapshot's description remains unmodified when updating consent code.",
-        snapshotDao.retrieveSnapshot(snapshotId).getDescription(),
+        snapshotConsentCodeSet.getDescription(),
         equalTo(defaultSnapshotDescription));
 
     String consentCodeOverride = "c99";
     SnapshotPatchRequestModel patchRequestOverride =
         new SnapshotPatchRequestModel().consentCode(consentCodeOverride);
     snapshotDao.patch(snapshotId, patchRequestOverride, TEST_USER);
+    Snapshot snapshotConsentCodeOverride = snapshotDao.retrieveSnapshot(snapshotId);
     assertThat(
         "snapshot's consent code is overridden from patch",
-        snapshotDao.retrieveSnapshot(snapshotId).getConsentCode(),
+        snapshotConsentCodeOverride.getConsentCode(),
         equalTo(consentCodeOverride));
 
     snapshotDao.patch(snapshotId, new SnapshotPatchRequestModel(), TEST_USER);
+    Snapshot snapshotEmptyPatch = snapshotDao.retrieveSnapshot(snapshotId);
     assertThat(
         "snapshot's consent code is unchanged when unspecified in patch request",
-        snapshotDao.retrieveSnapshot(snapshotId).getConsentCode(),
+        snapshotEmptyPatch.getConsentCode(),
         equalTo(consentCodeOverride));
     assertThat(
         "snapshot's description is unchanged when unspecified in patch request",
-        snapshotDao.retrieveSnapshot(snapshotId).getDescription(),
+        snapshotEmptyPatch.getDescription(),
         equalTo(defaultSnapshotDescription));
+
     SnapshotPatchRequestModel patchRequestBlank = new SnapshotPatchRequestModel().consentCode("");
     snapshotDao.patch(snapshotId, patchRequestBlank, TEST_USER);
+    Snapshot snapshotConsentCodeBlank = snapshotDao.retrieveSnapshot(snapshotId);
     assertThat(
         "snapshot's consent code is set to empty string from patch",
-        snapshotDao.retrieveSnapshot(snapshotId).getConsentCode(),
+        snapshotConsentCodeBlank.getConsentCode(),
         equalTo(""));
 
     SnapshotPatchRequestModel patchDescription =
         new SnapshotPatchRequestModel().description("A new description");
     snapshotDao.patch(snapshotId, patchDescription, TEST_USER);
+    Snapshot snapshotPatchDescription = snapshotDao.retrieveSnapshot(snapshotId);
     assertThat(
         "snapshot's description is updated",
-        snapshotDao.retrieveSnapshot(snapshotId).getDescription(),
+        snapshotPatchDescription.getDescription(),
         equalTo("A new description"));
     assertThat(
         "snapshot's consent code is still set to empty string from last consent code patch",
-        snapshotDao.retrieveSnapshot(snapshotId).getConsentCode(),
+        snapshotPatchDescription.getConsentCode(),
         equalTo(""));
 
     SnapshotPatchRequestModel patchDescAndCode =
         new SnapshotPatchRequestModel().consentCode("c99").description("Another new description");
     snapshotDao.patch(snapshotId, patchDescAndCode, TEST_USER);
+    Snapshot snapshotPatchDescAndCode = snapshotDao.retrieveSnapshot(snapshotId);
     assertThat(
         "snapshot's description is updated",
-        snapshotDao.retrieveSnapshot(snapshotId).getDescription(),
+        snapshotPatchDescAndCode.getDescription(),
         equalTo("Another new description"));
     assertThat(
         "snapshot's consent code is updated",
-        snapshotDao.retrieveSnapshot(snapshotId).getConsentCode(),
+        snapshotPatchDescAndCode.getConsentCode(),
         equalTo("c99"));
 
     SnapshotPatchRequestModel patchZeroLenStrDesc = new SnapshotPatchRequestModel().description("");
     snapshotDao.patch(snapshotId, patchZeroLenStrDesc, TEST_USER);
+    Snapshot snapshotDescriptionBlank = snapshotDao.retrieveSnapshot(snapshotId);
     assertThat(
         "snapshot's description is updated to empty string",
-        snapshotDao.retrieveSnapshot(snapshotId).getDescription(),
+        snapshotDescriptionBlank.getDescription(),
         equalTo(""));
   }
 
   @Test
-  public void createSnapshotWithProperties() throws Exception {
-    snapshotRequest.name(snapshotRequest.getName() + UUID.randomUUID());
+  public void createSnapshotWithProperties() {
     String properties =
         "{\"projectName\":\"project\", " + "\"authors\": [\"harry\", \"ron\", \"hermionie\"]}";
-    snapshotRequest.properties(properties);
-    Snapshot snapshot =
-        snapshotService
-            .makeSnapshotFromSnapshotRequest(snapshotRequest)
-            .projectResourceId(projectId)
-            .id(snapshotId);
-    String flightId = UUID.randomUUID().toString();
-    Snapshot fromDB = insertAndRetrieveSnapshot(snapshot, flightId);
+    snapshotRequest.name(snapshotRequest.getName() + UUID.randomUUID()).properties(properties);
+    Snapshot snapshot = daoOperations.createSnapshotFromSnapshotRequest(snapshotRequest, dataset);
+    Snapshot fromDB = insertAndRetrieveSnapshot(snapshot);
     assertThat(
         "snapshot properties set correctly",
         fromDB.getProperties(),
@@ -693,15 +803,11 @@ public class SnapshotDaoTest {
   }
 
   @Test
-  public void patchSnapshotProperties() throws Exception {
+  public void patchSnapshotProperties() {
     snapshotRequest.name(snapshotRequest.getName() + UUID.randomUUID());
-    Snapshot snapshot =
-        snapshotService
-            .makeSnapshotFromSnapshotRequest(snapshotRequest)
-            .projectResourceId(projectId)
-            .id(snapshotId);
-    Snapshot fromDB = insertAndRetrieveSnapshot(snapshot, "patchDatasetProperties_flightId");
-    assertThat("snapshot properties is null before patch", fromDB.getProperties(), equalTo(null));
+    Snapshot fromDb = createSnapshot(snapshotRequest);
+    UUID snapshotId = fromDb.getId();
+    assertNull("snapshot properties is null before patch", fromDb.getProperties());
 
     String updatedProperties = "{\"projectName\":\"updatedProject\"}";
     SnapshotPatchRequestModel patchRequestSet =
@@ -740,14 +846,7 @@ public class SnapshotDaoTest {
   @Test
   public void getAccessibleSnapshots() {
     snapshotRequest.name(snapshotRequest.getName() + UUID.randomUUID());
-    Snapshot snapshot =
-        snapshotService
-            .makeSnapshotFromSnapshotRequest(snapshotRequest)
-            .projectResourceId(projectId)
-            .id(snapshotId);
-    String flightId = UUID.randomUUID().toString();
-    snapshotDao.createAndLock(snapshot, flightId, TEST_USER);
-    snapshotDao.unlock(snapshotId, flightId);
+    UUID snapshotId = createSnapshot(snapshotRequest).getId();
 
     String consentCode = "c01";
     String phsId = "phs123456";
@@ -795,15 +894,11 @@ public class SnapshotDaoTest {
     assertThrows(
         "Exception is thrown when updating nonexistent snapshot",
         SnapshotUpdateException.class,
-        () -> snapshotDao.updateDuosFirecloudGroupId(snapshotId, duosFirecloudGroupId));
+        () -> snapshotDao.updateDuosFirecloudGroupId(UUID.randomUUID(), duosFirecloudGroupId));
 
     snapshotRequest.name(snapshotRequest.getName() + UUID.randomUUID());
-    Snapshot snapshot =
-        snapshotService
-            .makeSnapshotFromSnapshotRequest(snapshotRequest)
-            .projectResourceId(projectId)
-            .id(snapshotId);
-    Snapshot beforeUpdate = insertAndRetrieveSnapshot(snapshot, "snapshotWithDuos_flightId");
+    Snapshot beforeUpdate = createSnapshot(snapshotRequest);
+    UUID snapshotId = beforeUpdate.getId();
 
     assertNull(
         "snapshot's DUOS Firecloud group ID is null before update",
@@ -829,5 +924,177 @@ public class SnapshotDaoTest {
         afterUnset.getDuosFirecloudGroupId());
     assertNull(
         "snapshot's DUOS Firecloud group is null after unset", afterUnset.getDuosFirecloudGroup());
+  }
+
+  @Test
+  public void recordDrsIds() {
+    // This test runs through a couple of scenarios.  It's in one method to avoid the setup overhead
+    // Initialize test
+    snapshotRequest.name(snapshotRequest.getName() + UUID.randomUUID());
+    Snapshot snapshot1 = createSnapshot(snapshotRequest);
+    snapshotRequest.name(snapshotRequest.getName() + UUID.randomUUID());
+    Snapshot snapshot2 = createSnapshot(snapshotRequest);
+
+    List<DrsId> drsIds =
+        IntStream.range(0, 1000)
+            .boxed()
+            .map(i -> DrsIdService.fromUri("drs://home/v2_" + i))
+            .toList();
+
+    // Load drs ids (attempt loading duplicates)
+    assertThat(
+        "drsIds were inserted into snp1",
+        drsDao.recordDrsIdToSnapshot(snapshot1.getId(), drsIds),
+        equalTo(1000L));
+    assertThat(
+        "drsIds were ignored on reinsert into snp1",
+        drsDao.recordDrsIdToSnapshot(snapshot1.getId(), drsIds),
+        equalTo(0L));
+
+    assertThrows(
+        "can't insert id for an invalid snapshot",
+        Exception.class,
+        () -> drsDao.recordDrsIdToSnapshot(UUID.randomUUID(), drsIds));
+
+    // A subset of drs ids are in snapshot 2
+    assertThat(
+        "drsIds were inserted into snp2",
+        drsDao.recordDrsIdToSnapshot(snapshot2.getId(), drsIds.subList(0, 100)),
+        equalTo(100L));
+    assertThat(
+        "new drsIds were inserted into snp2",
+        drsDao.recordDrsIdToSnapshot(snapshot2.getId(), drsIds.subList(50, 150)),
+        equalTo(50L));
+
+    // Drs IDs are linked to correct snapshots
+    assertThat(
+        "lower numbered drs id is in snapshot 1 and snapshot 2",
+        drsDao.retrieveReferencedSnapshotIds(drsIds.get(0)),
+        containsInAnyOrder(snapshot1.getId(), snapshot2.getId()));
+
+    // Drs IDs are linked to correct snapshots
+    assertThat(
+        "higher numbered drs id is in snapshot 1 only",
+        drsDao.retrieveReferencedSnapshotIds(drsIds.get(500)),
+        containsInAnyOrder(snapshot1.getId()));
+
+    // Deleting snapshot 1 removes entries
+    assertThat(
+        "all 1000 entries removed when deleting the first snapshot",
+        drsDao.deleteDrsIdToSnapshotsBySnapshot(snapshot1.getId()),
+        equalTo(1000L));
+    assertThat(
+        "lower numbered drs id is now only in snapshot 2",
+        drsDao.retrieveReferencedSnapshotIds(drsIds.get(0)),
+        containsInAnyOrder(snapshot2.getId()));
+
+    // Deleting snapshot 2 removes entries
+    assertThat(
+        "all 150 entries removed when deleting the second snapshot",
+        drsDao.deleteDrsIdToSnapshotsBySnapshot(snapshot2.getId()),
+        equalTo(150L));
+  }
+
+  @Test
+  public void getSnapshotIds() {
+    assertThat(
+        "No snapshots in DB yield an empty UUID list", snapshotDao.getSnapshotIds(), empty());
+
+    String snapshotName = snapshotRequest.getName() + UUID.randomUUID();
+    String flightId = "getSnapshotIds_flightId";
+    for (int i = 0; i < 3; i++) {
+      snapshotRequest.name(makeName(snapshotName, i));
+      UUID snapshotId = createSnapshot(snapshotRequest).getId();
+      snapshotDao.lock(snapshotId, flightId);
+    }
+
+    assertThat(
+        "Locked snapshot UUIDs are returned",
+        snapshotDao.getSnapshotIds(),
+        containsInAnyOrder(snapshotIds.toArray()));
+
+    snapshotIds.forEach(id -> snapshotDao.unlock(id, flightId));
+    assertThat(
+        "Unlocked snapshot UUIDs are returned",
+        snapshotDao.getSnapshotIds(),
+        containsInAnyOrder(snapshotIds.toArray()));
+  }
+
+  @Test
+  public void createDatasetWithTags() {
+    snapshotRequest.name(snapshotRequest.getName() + UUID.randomUUID()).tags(null);
+    Snapshot snapshotNullTags = createSnapshot(snapshotRequest);
+    verifyTags("null snapshot tags are returned as empty list", snapshotNullTags, List.of());
+
+    snapshotRequest
+        .name(snapshotRequest.getName() + UUID.randomUUID())
+        .tags(new ResourceCreateTags());
+    Snapshot snapshotEmptyTags = createSnapshot(snapshotRequest);
+    verifyTags("empty snapshot tags are returned as empty list", snapshotEmptyTags, List.of());
+
+    ResourceCreateTags tags = new ResourceCreateTags();
+    tags.add(null);
+    tags.addAll(List.of("a tag", "A TAG", "duplicate", "duplicate"));
+    List<String> expectedTags = List.of("a tag", "A TAG", "duplicate");
+    snapshotRequest.name(snapshotRequest.getName() + UUID.randomUUID()).tags(tags);
+    Snapshot snapshotWithTags = createSnapshot(snapshotRequest);
+    verifyTags("distinct non-null tags are returned", snapshotWithTags, expectedTags);
+  }
+
+  private void verifyTags(String reason, Snapshot snapshot, List<String> expectedTags) {
+    assertThat(
+        reason + " when retrieving snapshot",
+        snapshot.getTags(),
+        containsInAnyOrder(expectedTags.toArray()));
+
+    assertThat(
+        reason + " when retrieving snapshot summary",
+        snapshotDao.retrieveSummaryById(snapshot.getId()).getTags(),
+        containsInAnyOrder(expectedTags.toArray()));
+  }
+
+  @Test
+  public void testRetrieveLockedSnapshot() {
+    Snapshot snapshot = createSnapshot(snapshotRequest);
+    UUID snapshotId = snapshot.getId();
+    String flightId = "flightId";
+
+    // After locking the snapshot, we should still be able to retrieve it
+    snapshotDao.lock(snapshotId, flightId);
+
+    Snapshot lockedSnapshot = snapshotDao.retrieveSnapshot(snapshotId);
+    String snapshotExclusiveLock =
+        ResourceLocksUtils.getExclusiveLock(lockedSnapshot.getResourceLocks());
+    assertThat("Locked snapshot can be retrieved", snapshotExclusiveLock, equalTo(flightId));
+
+    SnapshotSummary lockedSnapshotSummary = snapshotDao.retrieveSummaryById(snapshotId);
+    String snapshotSummaryExclusiveLock =
+        ResourceLocksUtils.getExclusiveLock(lockedSnapshotSummary.getResourceLocks());
+    assertThat(
+        "Locked snapshot summary can be retrieved",
+        snapshotSummaryExclusiveLock,
+        equalTo(flightId));
+
+    MetadataEnumeration<SnapshotSummary> snapshotEnumeration =
+        snapshotDao.retrieveSnapshots(
+            0, 1, null, null, null, null, datasetIds, snapshotIds, null, null);
+    assertThat(snapshotEnumeration.getTotal(), equalTo(1));
+    SnapshotSummary lockedSnapshotSummaryEnumerationItem = snapshotEnumeration.getItems().get(0);
+    String lockedSnapshotSummaryEnumerationItemExclusiveLock =
+        ResourceLocksUtils.getExclusiveLock(
+            lockedSnapshotSummaryEnumerationItem.getResourceLocks());
+    assertThat(
+        "Locked snapshot summary can be enumerated",
+        lockedSnapshotSummaryEnumerationItemExclusiveLock,
+        equalTo(flightId));
+
+    // Locked snapshot's project can be retrieved
+    verifySnapshotProject(snapshot);
+  }
+
+  @Test
+  public void testRetrieveSnapshotNotFound() {
+    assertThrows(
+        SnapshotNotFoundException.class, () -> snapshotDao.retrieveSnapshot(UUID.randomUUID()));
   }
 }
